--- a/ConfluxMobile/Conflux.UI/Conflux.UI.csproj
+++ b/ConfluxMobile/Conflux.UI/Conflux.UI.csproj
@@ -93,6 +93,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\FrameworkElementExtensions.cs" />
     <Compile Include="Common\NavigationHelper.cs" />
     <Compile Include="Common\ObservableDictionary.cs" />
     <Compile Include="Common\RelayCommand.cs" />
