--- a/ConfluxMobile/Conflux.UI/Conflux.UI.csproj
+++ b/ConfluxMobile/Conflux.UI/Conflux.UI.csproj
@@ -141,6 +141,7 @@
     <Content Include="Assets\BadgeLogo.scale-240.png" />
     <Content Include="Assets\ConfluxLogo.png" />
     <Content Include="Assets\Logo.scale-240.png" />
+    <Content Include="Assets\pin128.png" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SmallLogo.scale-140.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
