Added a visited status on Events on the UI.

--- a/ConfluxMobile/Conflux.Core/Conflux.Core.csproj
+++ b/ConfluxMobile/Conflux.Core/Conflux.Core.csproj
@@ -86,6 +86,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\EventDisplayItem.cs" />
     <Compile Include="Models\EventsSource.cs" />
     <Compile Include="Models\IIncrementalSource.cs" />
     <Compile Include="Models\IncrementalLoadingCollection.cs" />
