--- a/ConfluxMobile/Conflux.UI/Conflux.UI.csproj
+++ b/ConfluxMobile/Conflux.UI/Conflux.UI.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Converters\BoolToColorConverter.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Converters\NullToVisibilityConverter.cs" />
+    <Compile Include="Helpers\DependencyObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBlockExtension.cs" />
     <Compile Include="Text\TextFormatter.cs" />
