--- a/ConfluxMobile/Conflux.UI/Conflux.UI.csproj
+++ b/ConfluxMobile/Conflux.UI/Conflux.UI.csproj
@@ -103,11 +103,13 @@
     <Compile Include="Converters\NegatedBoolToVisibilityConverter.cs" />
     <Compile Include="Converters\NullToVisibilityConverter.cs" />
     <Compile Include="Helpers\DependencyObjectExtensions.cs" />
+    <Compile Include="Models\MapAppItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBlockExtension.cs" />
     <Compile Include="Text\TextFormatter.cs" />
     <Compile Include="ViewModels\EventDetailsViewModel.cs" />
     <Compile Include="ViewModels\MainHubViewModel.cs" />
+    <Compile Include="ViewModels\MapAppSelectionViewModel.cs" />
     <Compile Include="ViewModels\MyEventsViewModel.cs" />
     <Compile Include="ViewModels\OpenEventFlyoutAction.cs" />
     <Compile Include="ViewModels\SearchPreferencesViewModel.cs" />
@@ -135,9 +137,6 @@
     </Compile>
     <Compile Include="Views\SharedInfo.xaml.cs">
       <DependentUpon>SharedInfo.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="VisualControls\OpenMapChoiceDialog.xaml.cs">
-      <DependentUpon>OpenMapChoiceDialog.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -213,10 +212,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="VisualControls\OpenMapChoiceDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <PRIResource Include="Strings\ro-RO\Resources.resw" />
@@ -226,6 +221,7 @@
       <Name>Behaviors SDK %28XAML%29</Name>
     </SDKReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
