--- a/ConfluxMobile/Conflux.Tests/Conflux.Tests.csproj
+++ b/ConfluxMobile/Conflux.Tests/Conflux.Tests.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{d97808db-1937-4e36-95ef-af9783b99cd4}</ProjectGuid>
+    <ProjectGuid>{AFC4A4BE-76A0-4EE5-8C88-7C4D52B10E41}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Conflux.Tests</RootNamespace>
@@ -80,6 +80,10 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <ProjectReference Include="..\Conflux.Connectivity\Conflux.Connectivity.csproj">
+      <Project>{e1b1cd7e-503e-43ea-ade9-b3084eefeb36}</Project>
+      <Name>Conflux.Connectivity</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
@@ -99,5 +103,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-
 </Project>
