--- a/ConfluxMobile/Conflux.Tests/Conflux.Tests.csproj
+++ b/ConfluxMobile/Conflux.Tests/Conflux.Tests.csproj
@@ -73,6 +73,7 @@
     <SDKReference Include="TestPlatform, Version=12.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FacebookProviderMock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest1.cs" />
   </ItemGroup>
