--- a/ConfluxMobile/Conflux.Testing/Conflux.Testing.csproj
+++ b/ConfluxMobile/Conflux.Testing/Conflux.Testing.csproj
@@ -6,11 +6,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{16D2CE6E-FDB8-4D45-95F6-833ADC30A1F6}</ProjectGuid>
+    <ProjectGuid>{ffdddf03-5610-4f8f-9de8-fa8264de2ea7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Conflux.Tests</RootNamespace>
-    <AssemblyName>Conflux.Tests</AssemblyName>
+    <RootNamespace>Conflux.Testing</RootNamespace>
+    <AssemblyName>Conflux.Testing</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformVersion>8.1</TargetPlatformVersion>
     <MinimumVisualStudioVersion>12</MinimumVisualStudioVersion>
@@ -85,14 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="FacebookProviderMock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Conflux.Connectivity\Conflux.Connectivity.csproj">
-      <Project>{e1b1cd7e-503e-43ea-ade9-b3084eefeb36}</Project>
-      <Name>Conflux.Connectivity</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
@@ -108,4 +101,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+
 </Project>
