Added DateSentenceComposer to transform DateTime values into friendly time sentences.

--- a/ConfluxMobile/Conflux.Core/Conflux.Core.csproj
+++ b/ConfluxMobile/Conflux.Core/Conflux.Core.csproj
@@ -86,6 +86,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\DateTimeExtensions.cs" />
+    <Compile Include="Models\DateSentenceComposer.cs" />
     <Compile Include="Models\EventDisplayItem.cs" />
     <Compile Include="Models\EventsSource.cs" />
     <Compile Include="Models\IIncrementalSource.cs" />
