--- a/ConfluxMobile/Conflux.Tests/Conflux.Tests.csproj
+++ b/ConfluxMobile/Conflux.Tests/Conflux.Tests.csproj
@@ -73,6 +73,7 @@
     <SDKReference Include="TestPlatform, Version=12.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTimeExtensionsTests.cs" />
     <Compile Include="FacebookProviderMock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FacebookProviderTests.cs" />
@@ -98,6 +99,10 @@
     <ProjectReference Include="..\Conflux.Connectivity\Conflux.Connectivity.csproj">
       <Project>{e1b1cd7e-503e-43ea-ade9-b3084eefeb36}</Project>
       <Name>Conflux.Connectivity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Conflux.Core\Conflux.Core.csproj">
+      <Project>{5c39f5dc-339e-430d-a084-770674b36bfc}</Project>
+      <Name>Conflux.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
