--- a/ConfluxMobile/Conflux.UI/Conflux.UI.csproj
+++ b/ConfluxMobile/Conflux.UI/Conflux.UI.csproj
@@ -102,17 +102,22 @@
     <Compile Include="Controls\EventItem.xaml.cs">
       <DependentUpon>EventItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\HighlightEvents.xaml.cs">
+      <DependentUpon>HighlightEvents.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Converters\BoolToColorConverter.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Converters\DateSentenceConverter.cs" />
     <Compile Include="Converters\NegatedBoolToVisibilityConverter.cs" />
     <Compile Include="Converters\NullToVisibilityConverter.cs" />
     <Compile Include="Helpers\DependencyObjectExtensions.cs" />
+    <Compile Include="Models\EventsGroup.cs" />
     <Compile Include="Models\MapAppItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBlockExtension.cs" />
     <Compile Include="Text\TextFormatter.cs" />
     <Compile Include="ViewModels\EventDetailsViewModel.cs" />
+    <Compile Include="ViewModels\HighlightsViewModel.cs" />
     <Compile Include="ViewModels\MainHubViewModel.cs" />
     <Compile Include="ViewModels\MapAppSelectionViewModel.cs" />
     <Compile Include="ViewModels\MyEventsViewModel.cs" />
@@ -192,6 +197,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Controls\EventItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\HighlightEvents.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
